<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="detail"
            type="com.example.alvin.simplecontactlist.model.PerContactInfo" />
    </data>

    <ScrollView
        android:id="@+id/meaninglessname_0"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/meaninglessname_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_gray"
            android:clickable="false">

            <RelativeLayout
                android:id="@+id/part1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light"
                android:padding="@dimen/large_padding">

                <TextView
                    android:id="@+id/username_txt"
                    style="@style/ImportantText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{detail.username}" />

                <TextView
                    android:id="@+id/username_title"
                    style="@style/GrayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_txt"
                    android:text="@string/username" />

                <TextView
                    android:id="@+id/phone_txt"
                    style="@style/ImportantText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_title"
                    android:text="@{detail.phone}" />

                <TextView
                    android:id="@+id/phone_title"
                    style="@style/GrayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phone_txt"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/address_txt"
                    style="@style/ImportantText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phone_title"
                    android:text="@{detail.address}" />

                <TextView
                    android:id="@+id/address_title"
                    style="@style/GrayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/address_txt"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/website_txt"
                    style="@style/ImportantText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/address_title"
                    android:text="@{detail.website}" />

                <TextView
                    android:id="@+id/website_title"
                    style="@style/GrayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/website_txt"
                    android:text="@string/website" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/part2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/part1"
                android:layout_marginTop="@dimen/view_divider_height"
                android:background="@color/light"
                android:clickable="false"
                android:padding="@dimen/large_padding">

                <TextView
                    android:id="@+id/name"
                    style="@style/ImportantText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{detail.company.name}" />

                <TextView
                    android:id="@+id/catch_phrase"
                    style="@style/ImportantText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name"
                    android:text="@{detail.company.catchPhrase}" />

                <TextView
                    android:id="@+id/bs"
                    style="@style/ImportantText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/catch_phrase"
                    android:text="@{detail.company.bs}" />

                <TextView
                    android:id="@+id/meaninglessname_2"
                    style="@style/GrayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bs"
                    android:text="@string/company" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</layout>